# codex

./: .gitignore  README.md
ML-Basic/: House_Sales_in_King_Count_USA.jupyterlite.ipynb  ML_Model_Noob.ipynb
TUF/: GCDandHCF.cpp  README.md  TUF.java  alpha.h  binary.java  checkforprime.cpp  climbstair  default.cpp  fibonachi  fibonachi.cpp  frogjumo2  frogjumo2.cpp  frogjump  gcdofstr  gcdofstr.cpp  hashing.cpp  main.cpp  maxProfit  output.txt  printalldivisiors  printalldivisiors.cpp  recursion  recursion.cpp  sortpair  sortpair.cpp  temp.java  twosum  twosum.cpp  twosum_ER
TUF/.cph/: .GCDandHCF.cpp_235f370b266a96481c17d9599385a53b.prob  .TUF.java_41f253a8fa5f1a2ce940d9bcf5a28f43.prob  .checkforprime.cpp_ab98f2bb801aa00df904a719422408ea.prob  (+3 more)
TUF/config/: CMakeLists.txt  Leetcode.sublime-workspace  Makefile
accenture/: basicarray.java  basicstrings.java  collections.java  practice.java  sorting.java
c:c++/: happynum.cpp
codevita/: BestBubble.java  MazeRunner.py  Orchard.java  Orchard.py  PerfectBudget.py
java/: AbstractionTesting.java  ArrayTest.java  BitsMagic.java  ChainedException.java  ClassedAndObjects.java  GenericClassTest.java  Main.h  Main.java  MetaAnotation.java  NativeDemo.h  PrintWithWriter.java  ReadFromBuffer.java  Solution.java  WriteKeyword.java  tempCodeRunnerFile.java
leetcode/: README.md  alpha.h  hash  hashing  hashing.cpp  hello  input.txt  output.txt  twosum  twosum.cpp  twosum_ER.cpp
other/: PDFextrator.py  PLSQL.sql  aditi.java  animate.py  customers.bak  customers.sql  index.html  javaswing.java  students.bak  test.java  test.py
(+22 files in other folders)
